[gd_scene load_steps=6 format=3 uid="uid://db813b62lt7id"]

[ext_resource type="Script" path="res://src/game/ui/Winner.gd" id="1_advx0"]
[ext_resource type="FontFile" uid="uid://bwkk85s6e8x3" path="res://assets/fonts/tinypixel.otf" id="1_tcb15"]
[ext_resource type="AudioStream" uid="uid://denvurjnnacci" path="res://assets/sounds/music/winner-sound.ogg" id="2_dub0u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8svd7"]
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 0.784314)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dooy2"]

[node name="Winner" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 224.0
script = ExtResource("1_advx0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8svd7")

[node name="Label" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_tcb15")
theme_override_font_sizes/font_size = 32
text = "WINNER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 119.0
offset_top = 130.0
offset_right = 198.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("1_tcb15")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_dooy2")
text = "Restart"

[node name="AudioMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dub0u")
bus = &"Music"

[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_restart_button_pressed"]
